# ESA-ROB

./: .gitignore  .gitmodules  README.md  readme.md
assignment1/: CMakeLists.txt  package.xml  readme.md
assignment1/launch/: assignment1.launch
assignment1/src/: draw_triangle_node.cpp
beginner_tutorials/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
src/: readme.md
src/assignment1/: CMakeLists.txt  package.xml  readme.md
src/assignment1/launch/: assignment1.launch
src/assignment1/msg/: Triangle.msg
src/assignment2/: CMakeLists.txt  package.xml  readme.md
src/assignment2/include/: pid.h
src/assignment2/launch/: assignment2.launch  assignment2_point.launch  assignment2_servoing.launch
src/assignment2/src/: pid.cpp  pointshoot_node.cpp  servoing_node.cpp
src/assignment3/: CMakeLists.txt  package.xml  readme.md  uber_servoing_node.cpp
src/assignment3/include/: pid.h
src/assignment3/launch/: assignment3.launch  assignment3_rectangle.launch  assignment3_triangle.launch
src/assignment3/src/: follow_carrot_node.cpp  pid.cpp  rectangle_planner_node.cpp  triangle_planner_node.cpp
src/assignment4/: CMakeLists.txt  package.xml  readme.md
src/assignment4/launch/: assignment4.launch
src/assignment4/rviz/: urdf.rviz
src/assignment4/urdf/: lynxmotion.urdf.xacro
src/assignment5/: CMakeLists.txt  package.xml  readme.md
src/assignment5/action/: TurtleMove.action  ding.action
src/assignment5/launch/: assignment5.launch
src/assignment5/src/: action_server.cpp  move_triangle.cpp  turtlebot_move_action_server.cpp
src/assignment6/: CMakeLists.txt  package.xml  readme.md
src/assignment6/src/: move_points.cpp
src/mines-ros/: README.md
src/mines-ros/stage_behavior/: CMakeLists.txt
src/mines-ros/stage_behavior/launch/: behavior.launch
src/mines-ros/stage_behavior/src/: arbiter.cpp  cruise_behavior.cpp  escape_behavior.cpp  seek_behavior.cpp
