<?xml version="1.0"?>
<package>
  <name>assignment4</name>
  <version>1.33.7</version>
  <description>The assignment4 package</description>
  <maintainer email="l.jaeqx@student.fontys.nl">Lars Jaeqx</maintainer>
  <maintainer email="m.diep@student.fontys.nl">Minh-Triet Diep</maintainer>
  <license>GPLv3</license>
  <build_depend>message_generation</build_depend> 
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <export></export>
</package>
