<?xml version="1.0"?>
<package>
  <name>assignment4</name>
  <version>1.33.7</version>
  <description>The assignment4 package</description>
  <maintainer email="l.jaeqx@student.fontys.nl">Lars Jaeqx</maintainer>
  <maintainer email="m.diep@student.fontys.nl">Minh-Triet Diep</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>
</package>
