<?xml version="1.0"?>
<package>

  <name>assignment5</name>
  <version>1.33.7</version>
  <description>The assignment5 package</description>

  <maintainer email="l.jaeqx@student.fontys.nl">Lars Jaeqx</maintainer>
  <maintainer email="m.diep@student.fontys.nl">Minh-Triet Diep</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>

</package>